# contracts/openapi/bff-public.yaml
@@ -106,6 +106,74 @@ paths:
             application/json:
               schema:
                 $ref: ../error.schema.json
+  /search/click:
+    post:
+      summary: Search click event
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ../search-click-request.schema.json
+      responses:
+        "200":
+          description: Ack response
+          content:
+            application/json:
+              schema:
+                $ref: ../ack-response.schema.json
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
+        "429":
+          description: Rate limited
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
+  /search/dwell:
+    post:
+      summary: Search dwell event
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ../search-dwell-request.schema.json
+      responses:
+        "200":
+          description: Ack response
+          content:
+            application/json:
+              schema:
+                $ref: ../ack-response.schema.json
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
+        "429":
+          description: Rate limited
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
   /books/{docId}:
     get:
       summary: Book detail by doc id
